--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@oasisprotocol/sapphire-contracts": "^0.2.4",
+    "@oasisprotocol/sapphire-hardhat": "^2.16.1",
+    "@openzeppelin/contracts": "^4.9.3",
     "hardhat": "^2.12.2",
     "tailwindcss": "^3.3.3"
   }
